# humanoid-swe-challenge

./: .gitignore  LICENCE  README.md  pyproject.toml
box-pushing/: pyproject.toml
box-pushing/scripts/: preview_mj_scene.py  zero_agent.py
box-pushing/src/box_pushing/: mcp.py
box-pushing/src/box_pushing/gym_env/: base_env.py  env_config.py  util.py
box-pushing/src/box_pushing/mj_scene/: box_pushing_scene.xml  scene.py
log/demo/: box_pushing.npy  pusher_manipl_seed_42.npy
scripts/: box_pushing_playback.py  playback.py  preview_mj_scene.py  pusher_manip_playback.py  zero_agent.py
src/humanoid_swe_challenge/: config.py
src/humanoid_swe_challenge/llm_agent/: agent.py  utils.py
src/humanoid_swe_challenge/mcp/: box_pushing_mcp.py  mcp.py  pusher_manip_mcp.py  utils.py
src/humanoid_swe_challenge/sims/: base.py
src/humanoid_swe_challenge/sims/box_pushing/: base_env.py  env.py  env_config.py  mjcf_box_pushing.xml
src/humanoid_swe_challenge/sims/config/: video_cfg.py
src/humanoid_swe_challenge/sims/pusher_manip/: base_env.py  env.py  env_config.py  mjcf_pusher_manip.xml
