[project]
name = "humanoid-swe-challenge"
version = "0.1.0"
description = "Humanoid SWE intern challenge"
requires-python = ">=3.11"
dependencies = ["mujoco"]

[project.scripts]
humanoid-gym-mcp = "humanoid_swe_challenge.mcp.mcp:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

