[project]
name = "humanoid-swe-challenge"
version = "0.1.0"
description = "Humanoid SWE intern challenge"
requires-python = ">=3.11"
dependencies = ["mujoco"]

[project.scripts]
humanoid-box-pushing-mcp = "humanoid_swe_challenge.mcp.box_pushing_mcp:main"
humanoid-pusher-manip-mcp = "humanoid_swe_challenge.mcp.pusher_manip_mcp:main"
humanoid-llm-agent = "humanoid_swe_challenge.llm_agent.agent:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

